Subsectors Changes & Dollar sign for At A Glance

--- a/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.escaped.html
+++ b/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.escaped.html
@@ -37,21 +37,21 @@
             &lt;div class=&quot;view view--at-a-glance&quot;&gt;
               &lt;div class=&quot;views-row&quot;&gt;      
                 &lt;div class=&quot;views-field has-icon--favorite&quot;&gt;    
-                  &lt;span class=&quot;views-label views-label-count&quot;&gt;Favorites&lt;/span&gt;    
+                  &lt;span class=&quot;views-label&quot;&gt;Favorites&lt;/span&gt;    
                   &lt;span class=&quot;field-content&quot;&gt;1&lt;/span&gt;  
                 &lt;/div&gt;  
                 &lt;div class=&quot;views-field has-icon--comment&quot;&gt;    
-                  &lt;span class=&quot;views-label views-label-comment-count&quot;&gt;Comments&lt;/span&gt;    
+                  &lt;span class=&quot;views-label&quot;&gt;Comments&lt;/span&gt;    
                   &lt;span class=&quot;field-content&quot;&gt;2&lt;/span&gt;  
                 &lt;/div&gt;  
-                &lt;div class=&quot;views-field&quot;&gt;    
-                  &lt;span class=&quot;views-label&quot;&gt;Award Amount:&lt;/span&gt;    
-                  &lt;span class=&quot;field-content&quot;&gt;$100,000&lt;/span&gt;  
+                &lt;div class=&quot;views-field has-icon--amount&quot;&gt;    
+                  &lt;span class=&quot;views-label&quot;&gt;&lt;/span&gt;    
+                  &lt;span class=&quot;field__label&quot;&gt;$100,000&lt;/span&gt;  
                 &lt;/div&gt;  
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
-        &lt;/div&gt;      &lt;/div&gt;
+        &lt;/div&gt;       &lt;/div&gt;
       &lt;div class=&quot;l-box-second&quot;&gt;
         &lt;div style=&quot;background: #ccc; color: #fff; font-weight: bold; text-align: center;&quot;&gt;
         DEADLINEZ&lt;br&gt;
