--- a/patternlab/public/styleguide/html/styleguide.html
+++ b/patternlab/public/styleguide/html/styleguide.html
@@ -2148,21 +2148,21 @@ p q r s t u v w x y z { | } ~
     <div class="view view--at-a-glance">
       <div class="views-row">      
         <div class="views-field has-icon--favorite">    
-          <span class="views-label views-label-count">Favorites</span>    
+          <span class="views-label">Favorites</span>    
           <span class="field-content">1</span>  
         </div>  
         <div class="views-field has-icon--comment">    
-          <span class="views-label views-label-comment-count">Comments</span>    
+          <span class="views-label">Comments</span>    
           <span class="field-content">2</span>  
         </div>  
-        <div class="views-field">    
-          <span class="views-label">Award Amount:</span>    
-          <span class="field-content">$100,000</span>  
+        <div class="views-field has-icon--amount">    
+          <span class="views-label"></span>    
+          <span class="field__label">$100,000</span>  
         </div>  
       </div>
     </div>
   </div>
-</div>
+</div> 
 							<div class="sg-code" style="display: none">
 								<h3 class="sg-code-head">HTML</h3>
 								<pre class="sg-code-html">
@@ -2173,21 +2173,21 @@ p q r s t u v w x y z { | } ~
     &lt;div class=&quot;view view--at-a-glance&quot;&gt;
       &lt;div class=&quot;views-row&quot;&gt;      
         &lt;div class=&quot;views-field has-icon--favorite&quot;&gt;    
-          &lt;span class=&quot;views-label views-label-count&quot;&gt;Favorites&lt;/span&gt;    
+          &lt;span class=&quot;views-label&quot;&gt;Favorites&lt;/span&gt;    
           &lt;span class=&quot;field-content&quot;&gt;1&lt;/span&gt;  
         &lt;/div&gt;  
         &lt;div class=&quot;views-field has-icon--comment&quot;&gt;    
-          &lt;span class=&quot;views-label views-label-comment-count&quot;&gt;Comments&lt;/span&gt;    
+          &lt;span class=&quot;views-label&quot;&gt;Comments&lt;/span&gt;    
           &lt;span class=&quot;field-content&quot;&gt;2&lt;/span&gt;  
         &lt;/div&gt;  
-        &lt;div class=&quot;views-field&quot;&gt;    
-          &lt;span class=&quot;views-label&quot;&gt;Award Amount:&lt;/span&gt;    
-          &lt;span class=&quot;field-content&quot;&gt;$100,000&lt;/span&gt;  
+        &lt;div class=&quot;views-field has-icon--amount&quot;&gt;    
+          &lt;span class=&quot;views-label&quot;&gt;&lt;/span&gt;    
+          &lt;span class=&quot;field__label&quot;&gt;$100,000&lt;/span&gt;  
         &lt;/div&gt;  
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
-&lt;/div&gt;
+&lt;/div&gt; 
 									</code>
 								</pre>
 							</div>
@@ -3110,19 +3110,19 @@ p q r s t u v w x y z { | } ~
   <h2 class="pane__title">Related Subsectors</h2>
     <div class="pane__content">
       <div class="view view--subterms"> 
-          <div class="views-field-name"><a href="#">Agribusiness (SMSE)</a></div>
-          <div class="views-field-name"><a href="#">Agriculture and Climate Change</a></div>
-          <div class="views-field-name"><a href="#">Cultivation & Tools</a></div>
-          <div class="views-field-name"><a href="#">Financing & Policy</a></div>
-          <div class="views-field-name"><a href="#">Food Safety and Standards</a></div>
-          <div class="views-field-name"><a href="#">Irrigation</a></div>
-          <div class="views-field-name"><a href="#">Livestock & Aguiculture</a></div> 
-          <div class="views-field-name"><a href="#">Agriculture ICT & Technology</a></div>
-          <div class="views-field-name"><a href="#">Post Harvest</a></div>
-          <div class="views-field-name"><a href="#">Processing & Production</a></div>
-          <div class="views-field-name"><a href="#">Seeds & Stock</a></div>
-          <div class="views-field-name"><a href="#">Soil Management</a></div>
-          <div class="views-field-name"><a href="#">Other</a></div>
+          <div class="views-row"><a href="#">Agribusiness (SMSE)</a></div>
+          <div class="views-row"><a href="#">Agriculture and Climate Change</a></div>
+          <div class="views-row"><a href="#">Cultivation & Tools</a></div>
+          <div class="views-row"><a href="#">Financing & Policy</a></div>
+          <div class="views-row"><a href="#">Food Safety and Standards</a></div>
+          <div class="views-row"><a href="#">Irrigation</a></div>
+          <div class="views-row"><a href="#">Livestock & Aguiculture</a></div> 
+          <div class="views-row"><a href="#">Agriculture ICT & Technology</a></div>
+          <div class="views-row"><a href="#">Post Harvest</a></div>
+          <div class="views-row"><a href="#">Processing & Production</a></div>
+          <div class="views-row"><a href="#">Seeds & Stock</a></div>
+          <div class="views-row"><a href="#">Soil Management</a></div>
+          <div class="views-row"><a href="#">Other</a></div>
       </div>
     </div>
   </div>
@@ -3138,19 +3138,19 @@ p q r s t u v w x y z { | } ~
   &lt;h2 class=&quot;pane__title&quot;&gt;Related Subsectors&lt;/h2&gt;
     &lt;div class=&quot;pane__content&quot;&gt;
       &lt;div class=&quot;view view--subterms&quot;&gt; 
-          &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agribusiness (SMSE)&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agriculture and Climate Change&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cultivation &amp; Tools&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Financing &amp; Policy&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Food Safety and Standards&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Irrigation&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Livestock &amp; Aguiculture&lt;/a&gt;&lt;/div&gt; 
-          &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agriculture ICT &amp; Technology&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Post Harvest&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Processing &amp; Production&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Seeds &amp; Stock&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Soil Management&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Other&lt;/a&gt;&lt;/div&gt;
+          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agribusiness (SMSE)&lt;/a&gt;&lt;/div&gt;
+          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agriculture and Climate Change&lt;/a&gt;&lt;/div&gt;
+          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cultivation &amp; Tools&lt;/a&gt;&lt;/div&gt;
+          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Financing &amp; Policy&lt;/a&gt;&lt;/div&gt;
+          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Food Safety and Standards&lt;/a&gt;&lt;/div&gt;
+          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Irrigation&lt;/a&gt;&lt;/div&gt;
+          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Livestock &amp; Aguiculture&lt;/a&gt;&lt;/div&gt; 
+          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agriculture ICT &amp; Technology&lt;/a&gt;&lt;/div&gt;
+          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Post Harvest&lt;/a&gt;&lt;/div&gt;
+          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Processing &amp; Production&lt;/a&gt;&lt;/div&gt;
+          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Seeds &amp; Stock&lt;/a&gt;&lt;/div&gt;
+          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Soil Management&lt;/a&gt;&lt;/div&gt;
+          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Other&lt;/a&gt;&lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
@@ -4323,19 +4323,19 @@ p q r s t u v w x y z { | } ~
         <h2 class="pane__title">Related Subsectors</h2>
           <div class="pane__content">
             <div class="view view--subterms"> 
-                <div class="views-field-name"><a href="#">Agribusiness (SMSE)</a></div>
-                <div class="views-field-name"><a href="#">Agriculture and Climate Change</a></div>
-                <div class="views-field-name"><a href="#">Cultivation & Tools</a></div>
-                <div class="views-field-name"><a href="#">Financing & Policy</a></div>
-                <div class="views-field-name"><a href="#">Food Safety and Standards</a></div>
-                <div class="views-field-name"><a href="#">Irrigation</a></div>
-                <div class="views-field-name"><a href="#">Livestock & Aguiculture</a></div> 
-                <div class="views-field-name"><a href="#">Agriculture ICT & Technology</a></div>
-                <div class="views-field-name"><a href="#">Post Harvest</a></div>
-                <div class="views-field-name"><a href="#">Processing & Production</a></div>
-                <div class="views-field-name"><a href="#">Seeds & Stock</a></div>
-                <div class="views-field-name"><a href="#">Soil Management</a></div>
-                <div class="views-field-name"><a href="#">Other</a></div>
+                <div class="views-row"><a href="#">Agribusiness (SMSE)</a></div>
+                <div class="views-row"><a href="#">Agriculture and Climate Change</a></div>
+                <div class="views-row"><a href="#">Cultivation & Tools</a></div>
+                <div class="views-row"><a href="#">Financing & Policy</a></div>
+                <div class="views-row"><a href="#">Food Safety and Standards</a></div>
+                <div class="views-row"><a href="#">Irrigation</a></div>
+                <div class="views-row"><a href="#">Livestock & Aguiculture</a></div> 
+                <div class="views-row"><a href="#">Agriculture ICT & Technology</a></div>
+                <div class="views-row"><a href="#">Post Harvest</a></div>
+                <div class="views-row"><a href="#">Processing & Production</a></div>
+                <div class="views-row"><a href="#">Seeds & Stock</a></div>
+                <div class="views-row"><a href="#">Soil Management</a></div>
+                <div class="views-row"><a href="#">Other</a></div>
             </div>
           </div>
         </div>
@@ -4878,19 +4878,19 @@ p q r s t u v w x y z { | } ~
         &lt;h2 class=&quot;pane__title&quot;&gt;Related Subsectors&lt;/h2&gt;
           &lt;div class=&quot;pane__content&quot;&gt;
             &lt;div class=&quot;view view--subterms&quot;&gt; 
-                &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agribusiness (SMSE)&lt;/a&gt;&lt;/div&gt;
-                &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agriculture and Climate Change&lt;/a&gt;&lt;/div&gt;
-                &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cultivation &amp; Tools&lt;/a&gt;&lt;/div&gt;
-                &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Financing &amp; Policy&lt;/a&gt;&lt;/div&gt;
-                &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Food Safety and Standards&lt;/a&gt;&lt;/div&gt;
-                &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Irrigation&lt;/a&gt;&lt;/div&gt;
-                &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Livestock &amp; Aguiculture&lt;/a&gt;&lt;/div&gt; 
-                &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agriculture ICT &amp; Technology&lt;/a&gt;&lt;/div&gt;
-                &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Post Harvest&lt;/a&gt;&lt;/div&gt;
-                &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Processing &amp; Production&lt;/a&gt;&lt;/div&gt;
-                &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Seeds &amp; Stock&lt;/a&gt;&lt;/div&gt;
-                &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Soil Management&lt;/a&gt;&lt;/div&gt;
-                &lt;div class=&quot;views-field-name&quot;&gt;&lt;a href=&quot;#&quot;&gt;Other&lt;/a&gt;&lt;/div&gt;
+                &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agribusiness (SMSE)&lt;/a&gt;&lt;/div&gt;
+                &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agriculture and Climate Change&lt;/a&gt;&lt;/div&gt;
+                &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cultivation &amp; Tools&lt;/a&gt;&lt;/div&gt;
+                &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Financing &amp; Policy&lt;/a&gt;&lt;/div&gt;
+                &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Food Safety and Standards&lt;/a&gt;&lt;/div&gt;
+                &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Irrigation&lt;/a&gt;&lt;/div&gt;
+                &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Livestock &amp; Aguiculture&lt;/a&gt;&lt;/div&gt; 
+                &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agriculture ICT &amp; Technology&lt;/a&gt;&lt;/div&gt;
+                &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Post Harvest&lt;/a&gt;&lt;/div&gt;
+                &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Processing &amp; Production&lt;/a&gt;&lt;/div&gt;
+                &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Seeds &amp; Stock&lt;/a&gt;&lt;/div&gt;
+                &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Soil Management&lt;/a&gt;&lt;/div&gt;
+                &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Other&lt;/a&gt;&lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
         &lt;/div&gt;
@@ -5604,21 +5604,21 @@ p q r s t u v w x y z { | } ~
             <div class="view view--at-a-glance">
               <div class="views-row">      
                 <div class="views-field has-icon--favorite">    
-                  <span class="views-label views-label-count">Favorites</span>    
+                  <span class="views-label">Favorites</span>    
                   <span class="field-content">1</span>  
                 </div>  
                 <div class="views-field has-icon--comment">    
-                  <span class="views-label views-label-comment-count">Comments</span>    
+                  <span class="views-label">Comments</span>    
                   <span class="field-content">2</span>  
                 </div>  
-                <div class="views-field">    
-                  <span class="views-label">Award Amount:</span>    
-                  <span class="field-content">$100,000</span>  
+                <div class="views-field has-icon--amount">    
+                  <span class="views-label"></span>    
+                  <span class="field__label">$100,000</span>  
                 </div>  
               </div>
             </div>
           </div>
-        </div>      </div>
+        </div>       </div>
       <div class="l-box-second">
         <div style="background: #ccc; color: #fff; font-weight: bold; text-align: center;">
         DEADLINEZ<br>
@@ -5911,21 +5911,21 @@ p q r s t u v w x y z { | } ~
             &lt;div class=&quot;view view--at-a-glance&quot;&gt;
               &lt;div class=&quot;views-row&quot;&gt;      
                 &lt;div class=&quot;views-field has-icon--favorite&quot;&gt;    
-                  &lt;span class=&quot;views-label views-label-count&quot;&gt;Favorites&lt;/span&gt;    
+                  &lt;span class=&quot;views-label&quot;&gt;Favorites&lt;/span&gt;    
                   &lt;span class=&quot;field-content&quot;&gt;1&lt;/span&gt;  
                 &lt;/div&gt;  
                 &lt;div class=&quot;views-field has-icon--comment&quot;&gt;    
-                  &lt;span class=&quot;views-label views-label-comment-count&quot;&gt;Comments&lt;/span&gt;    
+                  &lt;span class=&quot;views-label&quot;&gt;Comments&lt;/span&gt;    
                   &lt;span class=&quot;field-content&quot;&gt;2&lt;/span&gt;  
                 &lt;/div&gt;  
-                &lt;div class=&quot;views-field&quot;&gt;    
-                  &lt;span class=&quot;views-label&quot;&gt;Award Amount:&lt;/span&gt;    
-                  &lt;span class=&quot;field-content&quot;&gt;$100,000&lt;/span&gt;  
+                &lt;div class=&quot;views-field has-icon--amount&quot;&gt;    
+                  &lt;span class=&quot;views-label&quot;&gt;&lt;/span&gt;    
+                  &lt;span class=&quot;field__label&quot;&gt;$100,000&lt;/span&gt;  
                 &lt;/div&gt;  
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
-        &lt;/div&gt;      &lt;/div&gt;
+        &lt;/div&gt;       &lt;/div&gt;
       &lt;div class=&quot;l-box-second&quot;&gt;
         &lt;div style=&quot;background: #ccc; color: #fff; font-weight: bold; text-align: center;&quot;&gt;
         DEADLINEZ&lt;br&gt;
