--- a/patternlab/public/patterns/03-templates-02-innovation-detail/03-templates-02-innovation-detail.html
+++ b/patternlab/public/patterns/03-templates-02-innovation-detail/03-templates-02-innovation-detail.html
@@ -616,19 +616,19 @@
         <h2 class="pane__title">Related Subsectors</h2>
           <div class="pane__content">
             <div class="view view--subterms"> 
-                <div class="views-field-name"><a href="#">Agribusiness (SMSE)</a></div>
-                <div class="views-field-name"><a href="#">Agriculture and Climate Change</a></div>
-                <div class="views-field-name"><a href="#">Cultivation & Tools</a></div>
-                <div class="views-field-name"><a href="#">Financing & Policy</a></div>
-                <div class="views-field-name"><a href="#">Food Safety and Standards</a></div>
-                <div class="views-field-name"><a href="#">Irrigation</a></div>
-                <div class="views-field-name"><a href="#">Livestock & Aguiculture</a></div> 
-                <div class="views-field-name"><a href="#">Agriculture ICT & Technology</a></div>
-                <div class="views-field-name"><a href="#">Post Harvest</a></div>
-                <div class="views-field-name"><a href="#">Processing & Production</a></div>
-                <div class="views-field-name"><a href="#">Seeds & Stock</a></div>
-                <div class="views-field-name"><a href="#">Soil Management</a></div>
-                <div class="views-field-name"><a href="#">Other</a></div>
+                <div class="views-row"><a href="#">Agribusiness (SMSE)</a></div>
+                <div class="views-row"><a href="#">Agriculture and Climate Change</a></div>
+                <div class="views-row"><a href="#">Cultivation & Tools</a></div>
+                <div class="views-row"><a href="#">Financing & Policy</a></div>
+                <div class="views-row"><a href="#">Food Safety and Standards</a></div>
+                <div class="views-row"><a href="#">Irrigation</a></div>
+                <div class="views-row"><a href="#">Livestock & Aguiculture</a></div> 
+                <div class="views-row"><a href="#">Agriculture ICT & Technology</a></div>
+                <div class="views-row"><a href="#">Post Harvest</a></div>
+                <div class="views-row"><a href="#">Processing & Production</a></div>
+                <div class="views-row"><a href="#">Seeds & Stock</a></div>
+                <div class="views-row"><a href="#">Soil Management</a></div>
+                <div class="views-row"><a href="#">Other</a></div>
             </div>
           </div>
         </div>
@@ -704,7 +704,7 @@
 </footer>
 
 
- 
+  
     <!--DO NOT REMOVE-->
     	
 	<script>
