--- a/public/sites/all/themes/gesso/patternlab/patterns/02-organisms-00-regions/index.html
+++ b/public/sites/all/themes/gesso/patternlab/patterns/02-organisms-00-regions/index.html
@@ -120,17 +120,14 @@
         </ul>
       </div>
     </nav>
-    <div class="block block-search-form block--search block--search-form">      
+    <div class="block block--search block--search-api-page-node-search">    
+      <h2 class="block__title">Node Search</h2>
       <form accept-charset="UTF-8">
-        <div class="container-inline">
-          <h2 class="element-invisible">Search form</h2>
-          <div class="form-item form-item--searchfield form-item--search-block-form">
-            <input type="search" class="form-text form-search" maxlength="128" size="15" value="" title="Enter the terms you wish to search for." placeholder="START SEARCHING...">
-          </div>
-          <div class="form-actions">
-            <input type="submit" class="button button--submit" value="Search">
-          </div>
+        <div class="form-item form-item--textfield">
+          <label for="edit-keys-1" class="form-item__label element-invisible">START SEARCHING...</label>
+          <input type="text" class="form-text" maxlength="128" size="15" value="" id="edit-keys-1" autocorrect="off" autocapitalize="off" placeholder="START SEARCHING...">
         </div>
+        <input type="submit" class="button button--submit" value="Search" name="op">
       </form>  
     </div>  </div>
 </div>
@@ -165,17 +162,14 @@
         &lt;/ul&gt;
       &lt;/div&gt;
     &lt;/nav&gt;
-    &lt;div class=&quot;block block-search-form block--search block--search-form&quot;&gt;      
+    &lt;div class=&quot;block block--search block--search-api-page-node-search&quot;&gt;    
+      &lt;h2 class=&quot;block__title&quot;&gt;Node Search&lt;/h2&gt;
       &lt;form accept-charset=&quot;UTF-8&quot;&gt;
-        &lt;div class=&quot;container-inline&quot;&gt;
-          &lt;h2 class=&quot;element-invisible&quot;&gt;Search form&lt;/h2&gt;
-          &lt;div class=&quot;form-item form-item--searchfield form-item--search-block-form&quot;&gt;
-            &lt;input type=&quot;search&quot; class=&quot;form-text form-search&quot; maxlength=&quot;128&quot; size=&quot;15&quot; value=&quot;&quot; title=&quot;Enter the terms you wish to search for.&quot; placeholder=&quot;START SEARCHING...&quot;&gt;
-          &lt;/div&gt;
-          &lt;div class=&quot;form-actions&quot;&gt;
-            &lt;input type=&quot;submit&quot; class=&quot;button button--submit&quot; value=&quot;Search&quot;&gt;
-          &lt;/div&gt;
+        &lt;div class=&quot;form-item form-item--textfield&quot;&gt;
+          &lt;label for=&quot;edit-keys-1&quot; class=&quot;form-item__label element-invisible&quot;&gt;START SEARCHING...&lt;/label&gt;
+          &lt;input type=&quot;text&quot; class=&quot;form-text&quot; maxlength=&quot;128&quot; size=&quot;15&quot; value=&quot;&quot; id=&quot;edit-keys-1&quot; autocorrect=&quot;off&quot; autocapitalize=&quot;off&quot; placeholder=&quot;START SEARCHING...&quot;&gt;
         &lt;/div&gt;
+        &lt;input type=&quot;submit&quot; class=&quot;button button--submit&quot; value=&quot;Search&quot; name=&quot;op&quot;&gt;
       &lt;/form&gt;  
     &lt;/div&gt;  &lt;/div&gt;
 &lt;/div&gt;
