--- a/public/sites/all/themes/gesso/patternlab/patterns/03-templates-02-innovation-detail/03-templates-02-innovation-detail.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/patterns/03-templates-02-innovation-detail/03-templates-02-innovation-detail.escaped.html
@@ -29,17 +29,14 @@
         &lt;/ul&gt;
       &lt;/div&gt;
     &lt;/nav&gt;
-    &lt;div class=&quot;block block-search-form block--search block--search-form&quot;&gt;      
+    &lt;div class=&quot;block block--search block--search-api-page-node-search&quot;&gt;    
+      &lt;h2 class=&quot;block__title&quot;&gt;Node Search&lt;/h2&gt;
       &lt;form accept-charset=&quot;UTF-8&quot;&gt;
-        &lt;div class=&quot;container-inline&quot;&gt;
-          &lt;h2 class=&quot;element-invisible&quot;&gt;Search form&lt;/h2&gt;
-          &lt;div class=&quot;form-item form-item--searchfield form-item--search-block-form&quot;&gt;
-            &lt;input type=&quot;search&quot; class=&quot;form-text form-search&quot; maxlength=&quot;128&quot; size=&quot;15&quot; value=&quot;&quot; title=&quot;Enter the terms you wish to search for.&quot; placeholder=&quot;START SEARCHING...&quot;&gt;
-          &lt;/div&gt;
-          &lt;div class=&quot;form-actions&quot;&gt;
-            &lt;input type=&quot;submit&quot; class=&quot;button button--submit&quot; value=&quot;Search&quot;&gt;
-          &lt;/div&gt;
+        &lt;div class=&quot;form-item form-item--textfield&quot;&gt;
+          &lt;label for=&quot;edit-keys-1&quot; class=&quot;form-item__label element-invisible&quot;&gt;START SEARCHING...&lt;/label&gt;
+          &lt;input type=&quot;text&quot; class=&quot;form-text&quot; maxlength=&quot;128&quot; size=&quot;15&quot; value=&quot;&quot; id=&quot;edit-keys-1&quot; autocorrect=&quot;off&quot; autocapitalize=&quot;off&quot; placeholder=&quot;START SEARCHING...&quot;&gt;
         &lt;/div&gt;
+        &lt;input type=&quot;submit&quot; class=&quot;button button--submit&quot; value=&quot;Search&quot; name=&quot;op&quot;&gt;
       &lt;/form&gt;  
     &lt;/div&gt;  &lt;/div&gt;
 &lt;/div&gt;
