At A Glance & How To Apply

--- a/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.html
+++ b/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.html
@@ -113,12 +113,18 @@
       </div>
       </div>
       <div class="l-box-third">
-        <div style="background: #ccc; color: #fff; font-weight: bold; text-align: center;">
-        APPLY BUTTONZ<br>
-        GO<br>
-        HERE<br>
-      </div>
-      </div>
+        <div class="pane"> 
+          <h2 class="pane__title">How to Apply</h2>
+          <div class="pane__content">
+            <div class="view view--how-to-apply">
+              <div class="views-row">
+                <div class="button button--alt">
+                  Apply For Opportunity    
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>       </div>
     </div>
   </div>
   <div class="l-wrapper layout-constrain">
@@ -353,7 +359,7 @@
 	<script>
 		// handle injection of items from PHP
 		var patternPartial = "organisms-funding";
-		var lineage        = [{"lineagePattern":"molecules-favorite-this","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-favorite-this\/01-molecules-04-panes-favorite-this.html","lineageState":"inprogress"},{"lineagePattern":"molecules-at-a-glance-funding","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-at-a-glance-funding\/01-molecules-04-panes-at-a-glance-funding.html","lineageState":"inprogress"},{"lineagePattern":"molecules-comments","lineagePath":"..\/..\/patterns\/01-molecules-02-drupal-comments\/01-molecules-02-drupal-comments.html","lineageState":"inprogress"}];
+		var lineage        = [{"lineagePattern":"molecules-favorite-this","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-favorite-this\/01-molecules-04-panes-favorite-this.html","lineageState":"inprogress"},{"lineagePattern":"molecules-at-a-glance-funding","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-at-a-glance-funding\/01-molecules-04-panes-at-a-glance-funding.html","lineageState":"inprogress"},{"lineagePattern":"molecules-how-to-apply-funding","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-how-to-apply-funding\/01-molecules-04-panes-how-to-apply-funding.html","lineageState":"inprogress"},{"lineagePattern":"molecules-comments","lineagePath":"..\/..\/patterns\/01-molecules-02-drupal-comments\/01-molecules-02-drupal-comments.html","lineageState":"inprogress"}];
 		var lineageR       = [{"lineagePattern":"templates-funding-detail","lineagePath":"..\/..\/patterns\/03-templates-04-funding-detail\/03-templates-04-funding-detail.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
