--- a/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -541,6 +541,42 @@
 							</div>
 						</div>
 					</div>
+					<div id="molecules-how-to-apply-funding" class="sg-pattern">
+						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-04-panes-how-to-apply-funding/01-molecules-04-panes-how-to-apply-funding.html" class="patternLink" data-patternpartial="molecules-how-to-apply-funding">How To Apply Funding</a></h2>
+						<div class="sg-pattern-body">
+							<div class="pane"> 
+  <h2 class="pane__title">How to Apply</h2>
+  <div class="pane__content">
+    <div class="view view--how-to-apply">
+      <div class="views-row">
+        <div class="button button--alt">
+          Apply For Opportunity    
+        </div>
+      </div>
+    </div>
+  </div>
+</div> 
+							<div class="sg-code" style="display: none">
+								<h3 class="sg-code-head">HTML</h3>
+								<pre class="sg-code-html">
+									<code>
+										&lt;div class=&quot;pane&quot;&gt; 
+  &lt;h2 class=&quot;pane__title&quot;&gt;How to Apply&lt;/h2&gt;
+  &lt;div class=&quot;pane__content&quot;&gt;
+    &lt;div class=&quot;view view--how-to-apply&quot;&gt;
+      &lt;div class=&quot;views-row&quot;&gt;
+        &lt;div class=&quot;button button--alt&quot;&gt;
+          Apply For Opportunity    
+        &lt;/div&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt; 
+									</code>
+								</pre>
+							</div>
+						</div>
+					</div>
 					<div id="molecules-innovation-assistance" class="sg-pattern">
 						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-04-panes-innovation-assistance/01-molecules-04-panes-innovation-assistance.html" class="patternLink" data-patternpartial="molecules-innovation-assistance">Innovation Assistance</a></h2>
 						<div class="sg-pattern-body">
