--- a/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.escaped.html
+++ b/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.escaped.html
@@ -60,12 +60,18 @@
       &lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;l-box-third&quot;&gt;
-        &lt;div style=&quot;background: #ccc; color: #fff; font-weight: bold; text-align: center;&quot;&gt;
-        APPLY BUTTONZ&lt;br&gt;
-        GO&lt;br&gt;
-        HERE&lt;br&gt;
-      &lt;/div&gt;
-      &lt;/div&gt;
+        &lt;div class=&quot;pane&quot;&gt; 
+          &lt;h2 class=&quot;pane__title&quot;&gt;How to Apply&lt;/h2&gt;
+          &lt;div class=&quot;pane__content&quot;&gt;
+            &lt;div class=&quot;view view--how-to-apply&quot;&gt;
+              &lt;div class=&quot;views-row&quot;&gt;
+                &lt;div class=&quot;button button--alt&quot;&gt;
+                  Apply For Opportunity    
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
   &lt;div class=&quot;l-wrapper layout-constrain&quot;&gt;
