--- a/patternlab/public/patterns/03-templates-00-homepage/03-templates-00-homepage.html
+++ b/patternlab/public/patterns/03-templates-00-homepage/03-templates-00-homepage.html
@@ -295,12 +295,12 @@
                   <div class="views-row">
           <article class="card">
             <div class="card__image">
-              <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
+              <a href="http://www.cheeseipsum.co.uk/"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
 </a>
             </div>
             <div class="card__content">
-              <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
-              <div><p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p></div>
+              <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
+              <div><p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p></div>
               <div class="card__counts">
                 <div class="view">
                   <div class="has-icon--evidence">0</div>
@@ -321,12 +321,12 @@
                   <div class="views-row">
           <article class="card">
             <div class="card__image">
-              <a href="http://slipsum.com/lite/"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
+              <a href="http://chrisvalleskey.com/fillerama/"><img src="http://lorempixel.com/500/300/transport/3/" alt="Card 5:3" height="300" width="500">
 </a>
             </div>
             <div class="card__content">
-              <h3 class="card__title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
-              <div><p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p></div>
+              <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
+              <div><p>I find your lack of faith disturbing. A tremor in the Force. The last time I felt it was in the presence of my old master. Don't act so surprised, Your Highness. You weren't on any mercy mission this time. Several transmissions were beamed to this ship by Rebel spies. I want to know what happened to the plans they sent you. The plans you refer to will soon be back in our hands.</p></div>
               <div class="card__counts">
                 <div class="view">
                   <div class="has-icon--evidence">0</div>
@@ -347,12 +347,12 @@
                   <div class="views-row">
           <article class="card">
             <div class="card__image">
-              <a href="http://hipsteripsum.me/"><img src="http://lorempixel.com/500/300/business/3/" alt="Card 5:3" height="300" width="500">
+              <a href="http://web20ipsum.com"><img src="http://lorempixel.com/500/300/technics/3/" alt="Card 5:3" height="300" width="500">
 </a>
             </div>
             <div class="card__content">
-              <h3 class="card__title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
-              <div><p>Fanny pack ullamco et veniam semiotics. Shoreditch PBR reprehenderit cliche, magna Tonx aesthetic. Narwhal photo booth DIY aute post-ironic anim. Vice cliche brunch est before they sold out fap, street art Odd Future fashion axe messenger bag nihil Tonx tattooed. Nihil hashtag incididunt, do eu art party Banksy jean shorts four loko typewriter.</p></div>
+              <h3 class="card__title"><a href="http://web20ipsum.com">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></h3>
+              <div><p>Wufoo diigo grockit sifteo divvyshot, unigo zooomr revver. Edmodo appjet joyent skype bubbli jajah zoodles joukuu xobni hojoki edmodo appjet, mozy mzinga akismet yuntaa joost yuntaa geni tivo insala yoono chumby, grockit sococo loopt zanga etsy cloudera koofers empressr jiglu blippy. Omgpop lanyrd joukuu sococo zimbra airbnb movity jibjab, foodzie.</p></div>
               <div class="card__counts">
                 <div class="view">
                   <div class="has-icon--evidence">0</div>
@@ -373,12 +373,12 @@
                   <div class="views-row">
           <article class="card">
             <div class="card__image">
-              <a href="http://lorizzle.nl/"><img src="http://lorempixel.com/500/300/animals/3/" alt="Card 5:3" height="300" width="500">
+              <a href="http://www.malevole.com/mv/misc/text/"><img src="http://lorempixel.com/500/300/sports/4/" alt="Card 5:3" height="300" width="500">
 </a>
             </div>
             <div class="card__content">
-              <h3 class="card__title"><a href="http://lorizzle.nl/">Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.</a></h3>
-              <div><p>Fizzle crazy tortor. Sed rizzle. Ass pimpin' dolor dapibizzle turpis tempizzle fo shizzle my nizzle. Maurizzle pellentesque its fo rizzle izzle turpis. Get down get down we gonna chung nizzle. Shizzlin dizzle eleifend rhoncizzle break it down. In yo ghetto platea dictumst. Bling bling dapibizzle. Curabitur break yo neck, yall fo, pretizzle eu, go to hizzle dope, own yo' vitae, nunc. Bizzle suscipizzle. Semper velit sizzle fo.</p></div>
+              <h3 class="card__title"><a href="http://www.malevole.com/mv/misc/text/">Thunder, thunder, thundercats, Ho!</a></h3>
+              <div><p>Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.</p></div>
               <div class="card__counts">
                 <div class="view">
                   <div class="has-icon--evidence">0</div>
@@ -410,7 +410,7 @@
                   <div class="views-row">
           <article class="card">
             <div class="card__content">
-              <h3 class="card__primary-title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+              <h3 class="card__primary-title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
               <div class="card__number">$30,000,000</div>
               <div class="card__due-date">Due by: 3/21/2015</div> 
               <div class="card__list">
@@ -442,7 +442,7 @@
                   <div class="views-row">
           <article class="card">
             <div class="card__content">
-              <h3 class="card__primary-title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
+              <h3 class="card__primary-title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
               <div class="card__number">$30,000,000</div>
               <div class="card__due-date">Due by: 3/21/2015</div> 
               <div class="card__list">
@@ -474,7 +474,7 @@
                   <div class="views-row">
           <article class="card">
             <div class="card__content">
-              <h3 class="card__primary-title"><a href="http://hipsteripsum.me/">Whatever swag accusamus occupy, gentrify butcher tote bag</a></h3>
+              <h3 class="card__primary-title"><a href="http://web20ipsum.com">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></h3>
               <div class="card__number">$30,000,000</div>
               <div class="card__due-date">Due by: 3/21/2015</div> 
               <div class="card__list">
@@ -506,7 +506,7 @@
                   <div class="views-row">
           <article class="card">
             <div class="card__content">
-              <h3 class="card__primary-title"><a href="http://lorizzle.nl/">Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.</a></h3>
+              <h3 class="card__primary-title"><a href="http://www.malevole.com/mv/misc/text/">Thunder, thunder, thundercats, Ho!</a></h3>
               <div class="card__number">$30,000,000</div>
               <div class="card__due-date">Due by: 3/21/2015</div> 
               <div class="card__list">
