--- a/patternlab/public/patterns/04-pages-04-funding-detail/04-pages-04-funding-detail.html
+++ b/patternlab/public/patterns/04-pages-04-funding-detail/04-pages-04-funding-detail.html
@@ -162,12 +162,18 @@
           </div>
           </div>
           <div class="l-box-third">
-            <div style="background: #ccc; color: #fff; font-weight: bold; text-align: center;">
-            APPLY BUTTONZ<br>
-            GO<br>
-            HERE<br>
+        <div class="pane"> 
+          <h2 class="pane__title">How to Apply</h2>
+          <div class="pane__content">
+            <div class="view view--how-to-apply">
+              <div class="views-row">
+                <div class="button button--alt">
+                  Apply For Opportunity    
+                </div>
+              </div>
+            </div>
           </div>
-          </div>
+        </div>           </div>
         </div>
       </div>
       <div class="l-wrapper layout-constrain">
