--- a/patternlab/public/styleguide/html/styleguide.html
+++ b/patternlab/public/styleguide/html/styleguide.html
@@ -2623,6 +2623,42 @@ p q r s t u v w x y z { | } ~
 							</div>
 						</div>
 					</div>
+					<div id="molecules-how-to-apply-funding" class="sg-pattern">
+						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-04-panes-how-to-apply-funding/01-molecules-04-panes-how-to-apply-funding.html" class="patternLink" data-patternpartial="molecules-how-to-apply-funding">How To Apply Funding</a></h2>
+						<div class="sg-pattern-body">
+							<div class="pane"> 
+  <h2 class="pane__title">How to Apply</h2>
+  <div class="pane__content">
+    <div class="view view--how-to-apply">
+      <div class="views-row">
+        <div class="button button--alt">
+          Apply For Opportunity    
+        </div>
+      </div>
+    </div>
+  </div>
+</div> 
+							<div class="sg-code" style="display: none">
+								<h3 class="sg-code-head">HTML</h3>
+								<pre class="sg-code-html">
+									<code>
+										&lt;div class=&quot;pane&quot;&gt; 
+  &lt;h2 class=&quot;pane__title&quot;&gt;How to Apply&lt;/h2&gt;
+  &lt;div class=&quot;pane__content&quot;&gt;
+    &lt;div class=&quot;view view--how-to-apply&quot;&gt;
+      &lt;div class=&quot;views-row&quot;&gt;
+        &lt;div class=&quot;button button--alt&quot;&gt;
+          Apply For Opportunity    
+        &lt;/div&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt; 
+									</code>
+								</pre>
+							</div>
+						</div>
+					</div>
 					<div id="molecules-innovation-assistance" class="sg-pattern">
 						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-04-panes-innovation-assistance/01-molecules-04-panes-innovation-assistance.html" class="patternLink" data-patternpartial="molecules-innovation-assistance">Innovation Assistance</a></h2>
 						<div class="sg-pattern-body">
@@ -5627,12 +5663,18 @@ p q r s t u v w x y z { | } ~
       </div>
       </div>
       <div class="l-box-third">
-        <div style="background: #ccc; color: #fff; font-weight: bold; text-align: center;">
-        APPLY BUTTONZ<br>
-        GO<br>
-        HERE<br>
-      </div>
-      </div>
+        <div class="pane"> 
+          <h2 class="pane__title">How to Apply</h2>
+          <div class="pane__content">
+            <div class="view view--how-to-apply">
+              <div class="views-row">
+                <div class="button button--alt">
+                  Apply For Opportunity    
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>       </div>
     </div>
   </div>
   <div class="l-wrapper layout-constrain">
@@ -5867,6 +5909,7 @@ p q r s t u v w x y z { | } ~
 										This pattern contains: 
 											<a href="../../patterns/01-molecules-04-panes-favorite-this/01-molecules-04-panes-favorite-this.html"><code>molecules-favorite-this</code></a>
 											<a href="../../patterns/01-molecules-04-panes-at-a-glance-funding/01-molecules-04-panes-at-a-glance-funding.html"><code>molecules-at-a-glance-funding</code></a>
+											<a href="../../patterns/01-molecules-04-panes-how-to-apply-funding/01-molecules-04-panes-how-to-apply-funding.html"><code>molecules-how-to-apply-funding</code></a>
 											<a href="../../patterns/01-molecules-02-drupal-comments/01-molecules-02-drupal-comments.html"><code>molecules-comments</code></a>
 									</div>
 								<h3 class="sg-code-head">HTML</h3>
@@ -5934,12 +5977,18 @@ p q r s t u v w x y z { | } ~
       &lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;l-box-third&quot;&gt;
-        &lt;div style=&quot;background: #ccc; color: #fff; font-weight: bold; text-align: center;&quot;&gt;
-        APPLY BUTTONZ&lt;br&gt;
-        GO&lt;br&gt;
-        HERE&lt;br&gt;
-      &lt;/div&gt;
-      &lt;/div&gt;
+        &lt;div class=&quot;pane&quot;&gt; 
+          &lt;h2 class=&quot;pane__title&quot;&gt;How to Apply&lt;/h2&gt;
+          &lt;div class=&quot;pane__content&quot;&gt;
+            &lt;div class=&quot;view view--how-to-apply&quot;&gt;
+              &lt;div class=&quot;views-row&quot;&gt;
+                &lt;div class=&quot;button button--alt&quot;&gt;
+                  Apply For Opportunity    
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
   &lt;div class=&quot;l-wrapper layout-constrain&quot;&gt;
