Deadline Calender w/ number only

--- a/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.escaped.html
+++ b/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.escaped.html
@@ -53,12 +53,20 @@
           &lt;/div&gt;
         &lt;/div&gt;      &lt;/div&gt;
       &lt;div class=&quot;l-box-second&quot;&gt;
-        &lt;div style=&quot;background: #ccc; color: #fff; font-weight: bold; text-align: center;&quot;&gt;
-        DEADLINEZ&lt;br&gt;
-        GO&lt;br&gt;
-        HERE&lt;br&gt;
-      &lt;/div&gt;
-      &lt;/div&gt;
+        &lt;div class=&quot;pane&quot;&gt; 
+          &lt;h2 class=&quot;pane__title&quot;&gt;Deadline&lt;/h2&gt;
+          &lt;div class=&quot;pane__content&quot;&gt;
+            &lt;div class=&quot;field field--funding-deadline&quot;&gt;
+              &lt;div class=&quot;field-items&quot;&gt;
+                &lt;div class=&quot;field-item even&quot;&gt;
+                  &lt;div class=&quot;date-display-single&quot;&gt;
+                    &lt;span class=&quot;date-display-single__number&quot;&gt;14&lt;/span&gt;
+                  &lt;/div&gt; 
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;       &lt;/div&gt;
       &lt;div class=&quot;l-box-third&quot;&gt;
         &lt;div style=&quot;background: #ccc; color: #fff; font-weight: bold; text-align: center;&quot;&gt;
         APPLY BUTTONZ&lt;br&gt;
