--- a/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.html
+++ b/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.html
@@ -106,12 +106,20 @@
           </div>
         </div>      </div>
       <div class="l-box-second">
-        <div style="background: #ccc; color: #fff; font-weight: bold; text-align: center;">
-        DEADLINEZ<br>
-        GO<br>
-        HERE<br>
-      </div>
-      </div>
+        <div class="pane"> 
+          <h2 class="pane__title">Deadline</h2>
+          <div class="pane__content">
+            <div class="field field--funding-deadline">
+              <div class="field-items">
+                <div class="field-item even">
+                  <div class="date-display-single">
+                    <span class="date-display-single__number">14</span>
+                  </div> 
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>       </div>
       <div class="l-box-third">
         <div style="background: #ccc; color: #fff; font-weight: bold; text-align: center;">
         APPLY BUTTONZ<br>
@@ -353,7 +361,7 @@
 	<script>
 		// handle injection of items from PHP
 		var patternPartial = "organisms-funding";
-		var lineage        = [{"lineagePattern":"molecules-favorite-this","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-favorite-this\/01-molecules-04-panes-favorite-this.html","lineageState":"inprogress"},{"lineagePattern":"molecules-at-a-glance-funding","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-at-a-glance-funding\/01-molecules-04-panes-at-a-glance-funding.html","lineageState":"inprogress"},{"lineagePattern":"molecules-comments","lineagePath":"..\/..\/patterns\/01-molecules-02-drupal-comments\/01-molecules-02-drupal-comments.html","lineageState":"inprogress"}];
+		var lineage        = [{"lineagePattern":"molecules-favorite-this","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-favorite-this\/01-molecules-04-panes-favorite-this.html","lineageState":"inprogress"},{"lineagePattern":"molecules-at-a-glance-funding","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-at-a-glance-funding\/01-molecules-04-panes-at-a-glance-funding.html","lineageState":"inprogress"},{"lineagePattern":"molecules-deadline-funding","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-deadline-funding\/01-molecules-04-panes-deadline-funding.html","lineageState":"inprogress"},{"lineagePattern":"molecules-comments","lineagePath":"..\/..\/patterns\/01-molecules-02-drupal-comments\/01-molecules-02-drupal-comments.html","lineageState":"inprogress"}];
 		var lineageR       = [{"lineagePattern":"templates-funding-detail","lineagePath":"..\/..\/patterns\/03-templates-04-funding-detail\/03-templates-04-funding-detail.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
