Changes to At A Glance and How to Apply

--- a/patternlab/public/patterns/01-molecules-04-panes-deadline-funding/01-molecules-04-panes-deadline-funding.html
+++ b/patternlab/public/patterns/01-molecules-04-panes-deadline-funding/01-molecules-04-panes-deadline-funding.html
@@ -52,22 +52,26 @@
       <a href="#main" class="skiplinks__link element-invisible element-focusable">Skip to main content</a>
     </div>
 <div class="pane"> 
-  <h2 class="pane__title">How to Apply</h2>
+  <h2 class="pane__title">Deadline</h2>
   <div class="pane__content">
-    <div class="view view--how-to-apply">
-        <a class="button button--edit button--highlight">
-          Apply For Opportunity    
-        </a>
+    <div class="field field--funding-deadline">
+      <div class="field-items">
+        <div class="field-item even">
+          <div class="date-display-single">
+            <span class="date-display-single__number">14</span>
+          </div> 
+        </div>
+      </div>
     </div>
   </div>
-</div>  
+</div> 
     <!--DO NOT REMOVE-->
     	
 	<script>
 		// handle injection of items from PHP
-		var patternPartial = "molecules-how-to-apply-funding";
+		var patternPartial = "molecules-deadline-funding";
 		var lineage        = [];
-		var lineageR       = [{"lineagePattern":"organisms-funding","lineagePath":"..\/..\/patterns\/02-organisms-01-content-types-04-funding\/02-organisms-01-content-types-04-funding.html","lineageState":"inprogress"}];
+		var lineageR       = [];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
 	</script>
