--- a/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.html
+++ b/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.html
@@ -117,14 +117,12 @@
           <h2 class="pane__title">How to Apply</h2>
           <div class="pane__content">
             <div class="view view--how-to-apply">
-              <div class="views-row">
-                <div class="button button--alt">
+                <a class="button button--edit button--highlight">
                   Apply For Opportunity    
-                </div>
-              </div>
+                </a>
             </div>
           </div>
-        </div>       </div>
+        </div>        </div>
     </div>
   </div>
   <div class="l-wrapper layout-constrain">
