--- a/patternlab/public/patterns/03-templates-04-funding-detail/03-templates-04-funding-detail.escaped.html
+++ b/patternlab/public/patterns/03-templates-04-funding-detail/03-templates-04-funding-detail.escaped.html
@@ -113,14 +113,12 @@
           &lt;h2 class=&quot;pane__title&quot;&gt;How to Apply&lt;/h2&gt;
           &lt;div class=&quot;pane__content&quot;&gt;
             &lt;div class=&quot;view view--how-to-apply&quot;&gt;
-              &lt;div class=&quot;views-row&quot;&gt;
-                &lt;div class=&quot;button button--alt&quot;&gt;
+                &lt;a class=&quot;button button--edit button--highlight&quot;&gt;
                   Apply For Opportunity    
-                &lt;/div&gt;
-              &lt;/div&gt;
+                &lt;/a&gt;
             &lt;/div&gt;
           &lt;/div&gt;
-        &lt;/div&gt;           &lt;/div&gt;
+        &lt;/div&gt;            &lt;/div&gt;
         &lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;l-wrapper layout-constrain&quot;&gt;
