--- a/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -211,6 +211,46 @@
 							</div>
 						</div>
 					</div>
+					<div id="molecules-deadline-funding" class="sg-pattern">
+						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-04-panes-deadline-funding/01-molecules-04-panes-deadline-funding.html" class="patternLink" data-patternpartial="molecules-deadline-funding">Deadline Funding</a></h2>
+						<div class="sg-pattern-body">
+							<div class="pane"> 
+  <h2 class="pane__title">Deadline</h2>
+  <div class="pane__content">
+    <div class="field field--funding-deadline">
+      <div class="field-items">
+        <div class="field-item even">
+          <div class="date-display-single">
+            <span class="date-display-single__number">14</span>
+          </div> 
+        </div>
+      </div>
+    </div>
+  </div>
+</div> 
+							<div class="sg-code" style="display: none">
+								<h3 class="sg-code-head">HTML</h3>
+								<pre class="sg-code-html">
+									<code>
+										&lt;div class=&quot;pane&quot;&gt; 
+  &lt;h2 class=&quot;pane__title&quot;&gt;Deadline&lt;/h2&gt;
+  &lt;div class=&quot;pane__content&quot;&gt;
+    &lt;div class=&quot;field field--funding-deadline&quot;&gt;
+      &lt;div class=&quot;field-items&quot;&gt;
+        &lt;div class=&quot;field-item even&quot;&gt;
+          &lt;div class=&quot;date-display-single&quot;&gt;
+            &lt;span class=&quot;date-display-single__number&quot;&gt;14&lt;/span&gt;
+          &lt;/div&gt; 
+        &lt;/div&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt; 
+									</code>
+								</pre>
+							</div>
+						</div>
+					</div>
 					<div id="molecules-favorite-this" class="sg-pattern">
 						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-04-panes-favorite-this/01-molecules-04-panes-favorite-this.html" class="patternLink" data-patternpartial="molecules-favorite-this">Favorite This</a></h2>
 						<div class="sg-pattern-body">
@@ -548,14 +588,12 @@
   <h2 class="pane__title">How to Apply</h2>
   <div class="pane__content">
     <div class="view view--how-to-apply">
-      <div class="views-row">
-        <div class="button button--alt">
+        <a class="button button--edit button--highlight">
           Apply For Opportunity    
-        </div>
-      </div>
+        </a>
     </div>
   </div>
-</div> 
+</div>  
 							<div class="sg-code" style="display: none">
 								<h3 class="sg-code-head">HTML</h3>
 								<pre class="sg-code-html">
@@ -564,14 +602,12 @@
   &lt;h2 class=&quot;pane__title&quot;&gt;How to Apply&lt;/h2&gt;
   &lt;div class=&quot;pane__content&quot;&gt;
     &lt;div class=&quot;view view--how-to-apply&quot;&gt;
-      &lt;div class=&quot;views-row&quot;&gt;
-        &lt;div class=&quot;button button--alt&quot;&gt;
+        &lt;a class=&quot;button button--edit button--highlight&quot;&gt;
           Apply For Opportunity    
-        &lt;/div&gt;
-      &lt;/div&gt;
+        &lt;/a&gt;
     &lt;/div&gt;
   &lt;/div&gt;
-&lt;/div&gt; 
+&lt;/div&gt;  
 									</code>
 								</pre>
 							</div>
