--- a/patternlab/public/patterns/02-organisms-01-content-types/index.html
+++ b/patternlab/public/patterns/02-organisms-01-content-types/index.html
@@ -1942,14 +1942,12 @@
           <h2 class="pane__title">How to Apply</h2>
           <div class="pane__content">
             <div class="view view--how-to-apply">
-              <div class="views-row">
-                <div class="button button--alt">
+                <a class="button button--edit button--highlight">
                   Apply For Opportunity    
-                </div>
-              </div>
+                </a>
             </div>
           </div>
-        </div>       </div>
+        </div>        </div>
     </div>
   </div>
   <div class="l-wrapper layout-constrain">
@@ -2256,14 +2254,12 @@
           &lt;h2 class=&quot;pane__title&quot;&gt;How to Apply&lt;/h2&gt;
           &lt;div class=&quot;pane__content&quot;&gt;
             &lt;div class=&quot;view view--how-to-apply&quot;&gt;
-              &lt;div class=&quot;views-row&quot;&gt;
-                &lt;div class=&quot;button button--alt&quot;&gt;
+                &lt;a class=&quot;button button--edit button--highlight&quot;&gt;
                   Apply For Opportunity    
-                &lt;/div&gt;
-              &lt;/div&gt;
+                &lt;/a&gt;
             &lt;/div&gt;
           &lt;/div&gt;
-        &lt;/div&gt;       &lt;/div&gt;
+        &lt;/div&gt;        &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
   &lt;div class=&quot;l-wrapper layout-constrain&quot;&gt;
